<resources>
    <string name="app_name">Salebot</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="new_message_hint">Написать</string>
    <string name="error">Ошибка</string>
    <string name="no_messages">Нет сообщений</string>
    <string name="attach_messages">[Вложение]</string>
    <string name="close_app">Закрыть приложение?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="client_type_vk">VK</string>
    <string name="client_type_telegram">Телеграм</string>
    <string name="client_type_viber">Viber</string>
    <string name="client_type_facebook">Facebook</string>
    <string name="client_type_talk_me">Talk me</string>
    <string name="client_type_online_chat">Online chat</string>
    <string name="client_type_whatsapp">WhatsApp</string>
    <string name="client_type_avito">Avito</string>
    <string name="client_type_ok">Одноклассники</string>
    <string name="client_type_retail">Retail</string>
    <string name="client_type_instagram">Instagram</string>
    <string name="empty_list">Пустой список</string>
    <string name="delete_dialog">Удалить диалог?</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="off_notification">Выключить уведомления</string>
    <string name="on_notification">Включить уведомления</string>
    <string name="rooms_toolbar_search">Поиск</string>
    <string name="back">Назад</string>
    <string name="always_notification">Уведомления</string>
    <string name="message_not_delivered">Сообщение не доставлено</string>
    <string name="message_not_delivered_notif">[Сообщение не доставлено] %s</string>
    <string name="profile_client_id">ID клиента: %s</string>
    <string name="profile_responsible_id">ID ответственного: %s</string>
    <string name="profile_responsible_id_empty">ID ответственного: Отсуствует</string>
    <string name="profile_time_action">Последнее действие: %s</string>
    <string name="profile_title">Профиль</string>
    <string name="rooms_menu_all">Все\nобращения</string>
    <string name="rooms_menu_wait">Ожидают\nответа</string>
    <string name="rooms_menu_my">Мои\nклиенты</string>
    <string name="rooms_menu_free">Свободные\nклиенты</string>
    <string name="messages_lock">Заблокировать</string>
    <string name="messages_unlock">Разблокировать</string>
    <string name="messages_play_bot">Запустить бота</string>
    <string name="messages_pause_bot">Поставить бота на паузу</string>
    <string name="messages_client_info">Информация о клиенте</string>
    <string name="messages_template_id">Шаблон №%s</string>
    <string name="messages_template_reset">Сбросить</string>
    <string name="messages_activity_not_fount">Отсутствует приложение способное открыть этот файл</string>
    <string name="add">Добавить</string>
    <string name="change">Изменить</string>
    <string name="value">Значение</string>
    <string name="variable">Переменная</string>
    <string name="add_variable">Добавить переменную</string>
    <string name="change_variable">Изменить переменную</string>
    <string name="delete">Удалить</string>
    <string name="take_me_client">Взять клиента себе</string>
    <string name="refuse_client">Отказаться от клиента</string>
    <string name="template_search">Поиск по описанию и ответу</string>
    <string name="show_everything">Показать все блоки</string>
    <string name="select_block">Выбор блока</string>
    <string name="add_client_value">Добавить переменную клиента</string>
    <string name="client_value">Переменные клиента:</string>
    <string name="client_info">Информация о клиенте:</string>
    <string name="order_value">Переменные сделки:</string>
    <string name="add_order_value">Добавить переменную сделки</string>
    <string name="action_not_read_dialog">Пометить как непрочитанное</string>
</resources>
