<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/ic_notifications_off"
        android:orderInCategory="300"
        android:title="@string/off_notification" />

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/rooms_toolbar_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_not_reade"
        android:orderInCategory="300"
        android:title="@string/action_not_read_dialog" />

    <item
        android:id="@+id/app_bar_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="always" />


</menu>