<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <View
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/top_bottom_sheet" />

    <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/add_variable"
            android:textColor="@color/black"
            android:textSize="18sp" />

    <EditText
            android:id="@+id/etVariable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit"
            android:hint="@string/variable"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="#fff"
            android:textColorHint="#fff" />

    <EditText
            android:id="@+id/etValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit"
            android:hint="@string/value"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="#fff"
            android:textColorHint="#fff" />

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:text="@string/delete"
            android:textColor="#fff"
            android:visibility="gone"
            tools:visibility="visible" />

        <Space
                android:id="@+id/spaceBtn"
                android:layout_height="wrap_content"
                android:layout_width="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:text="@string/add"
            android:textColor="#fff" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>