<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#fff"
        tools:context=".mvp.login.LoginFragment">

    <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/logo" />

    <EditText
            android:id="@+id/loginView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:layout_marginBottom="10dp"
            android:hint="@string/login"/>

    <EditText
            android:id="@+id/passView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit"
            android:inputType="textPersonName|textPassword"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enterView"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_button"
        android:textColor="#fff"
        android:layout_marginBottom="5dp"
        android:text="@string/enter" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createNewView"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="#aaa"
        android:textStyle="bold"
        android:text="@string/create_account" />

    <ProgressBar
            android:id="@+id/progressBarView"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

    <TextView
            android:id="@+id/textErrorView"
            android:layout_width="200dp"
            android:gravity="center"
            android:textColor="@color/error"
            android:layout_height="wrap_content"/>

</LinearLayout>