<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mvp.template.TemplateActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarView"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:elevation="5dp"
        app:contentInsetStart="0dp"
        app:title="@string/select_block" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edit"
            android:hint="@string/template_search"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#fff"
            android:textColorHint="#B2FFFFFF" />

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_button"
            android:padding="5dp"
            android:src="@drawable/ic_search" />

    </LinearLayout>


    <RadioGroup
        android:id="@+id/rgColors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/top_bottom_sheet"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <RadioButton
            android:id="@+id/rbColor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/typeTemplateColor1" />

        <RadioButton
            android:id="@+id/rbColor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/typeTemplateColor2" />

        <RadioButton
            android:id="@+id/rbColor3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/typeTemplateColor3" />

        <RadioButton
            android:id="@+id/rbColor4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/typeTemplateColor4" />

        <RadioButton
            android:id="@+id/rbColor5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/typeTemplateColor5" />

        <RadioButton
            android:id="@+id/rbColor6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/typeTemplateColor6" />

        <RadioButton
            android:id="@+id/rbColor7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/typeTemplateColor7" />

        <RadioButton
            android:id="@+id/rbColor8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/typeTemplateColor8" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnShowAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/show_everything"
        android:visibility="gone"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTemplate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_template" />

</LinearLayout>